--- a/Stratum.Droid/Resources/layout/fragmentIntroPage.axml
+++ b/Stratum.Droid/Resources/layout/fragmentIntroPage.axml
@@ -17,12 +17,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_gravity="center"
             android:id="@+id/image"
-            android:src="@drawable/big_ic_logo"/>
+            app:srcCompat="@drawable/big_ic_logo"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="wrap_content"
