--- a/Stratum.WearOS/Resources/layout/activityMain.axml
+++ b/Stratum.WearOS/Resources/layout/activityMain.axml
@@ -12,53 +12,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <RelativeLayout
-        android:id="@+id/layoutEmpty"
-        android:visibility="gone"
-        android:paddingStart="30dp"
-        android:paddingEnd="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_centerInParent="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:text="@string/noAuthenticators"
-                android:textColor="?attr/primaryTextColor"
-                android:textSize="16sp"
-                android:layout_marginBottom="4dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:text="@string/noAuthenticatorsMessage"
-                android:textColor="?attr/secondaryTextColor"
-                android:textSize="12sp"
-                android:gravity="center_horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-        </LinearLayout>
-    </RelativeLayout>
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.wear.widget.WearableRecyclerView
-            android:id="@+id/list"
+        <androidx.fragment.app.FragmentContainerView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/viewFragment"
             android:visibility="invisible"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:scrollbars="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
+            android:layout_height="match_parent" />
+        
         <LinearLayout
             android:id="@+id/layoutOffline"
             android:gravity="center_horizontal"
@@ -76,9 +40,7 @@
                 android:layout_height="22dp"
                 android:contentDescription="@string/offline"
                 android:src="@drawable/baseline_cloud_off_24"/>
-
         </LinearLayout>
-
     </FrameLayout>
 
     <androidx.wear.widget.drawer.WearableNavigationDrawerView
