fix inverted code colour on some devices

--- a/Stratum.Droid/Resources/layout/listItemAuthCompact.axml
+++ b/Stratum.Droid/Resources/layout/listItemAuthCompact.axml
@@ -67,7 +67,7 @@
             android:text="000 000"
             android:textDirection="ltr"
             android:textAppearance="?attr/textAppearanceTitleLarge"
-            android:textColor="?attr/colorOnSecondaryContainer"
+            android:textColor="?attr/colorOnSurface"
             app:layout_constraintBottom_toTopOf="@id/progressIndicator"
             app:layout_constraintEnd_toStartOf="@id/layoutControl"
             app:layout_constraintStart_toStartOf="parent"
