--- a/Stratum.Droid/Resources/layout/listItemAuthTile.axml
+++ b/Stratum.Droid/Resources/layout/listItemAuthTile.axml
@@ -77,7 +77,7 @@
                 android:text="000 000"
                 android:textDirection="ltr"
                 android:textAppearance="?attr/textAppearanceTitleLarge"
-                android:textColor="?attr/colorOnSecondaryContainer"
+                android:textColor="?attr/colorOnSurface"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
