--- a/Stratum.Droid/Resources/layout/sheetMainMenu.axml
+++ b/Stratum.Droid/Resources/layout/sheetMainMenu.axml
@@ -30,7 +30,7 @@
             <com.google.android.material.textview.MaterialTextView
                 android:text="@string/categories"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
-                android:textColor="?attr/colorOnSecondaryContainer"
+                android:textColor="?attr/colorOnSurface"
                 android:layout_marginBottom="18dp"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
@@ -49,7 +49,7 @@
             <com.google.android.material.textview.MaterialTextView
                 android:text="@string/more"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
-                android:textColor="?attr/colorOnSecondaryContainer"
+                android:textColor="?attr/colorOnSurface"
                 android:layout_marginBottom="12dp"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
